--- a/Application/QRCode/app/src/main/res/layout/activity_main.xml
+++ b/Application/QRCode/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/scanQR"
+        android:id="@+id/btn_scanQR"
         android:layout_width="137dp"
         android:layout_height="139dp"
         android:layout_marginStart="137dp"
@@ -16,4 +16,26 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/text_Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginBottom="149dp"
+        android:text="전기차 무선충전"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/btn_scanQR"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="209dp"
+        android:layout_height="358dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginBottom="108dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_scanQR"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/electric_car_icon" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
