--- a/Application/QRCode/app/src/main/res/layout/activity_status.xml
+++ b/Application/QRCode/app/src/main/res/layout/activity_status.xml
@@ -23,10 +23,10 @@
         android:id="@+id/percentageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
         android:layout_marginTop="340dp"
         android:text="Charge Percentage"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,10 +34,10 @@
         android:id="@+id/voltageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
         android:layout_marginTop="388dp"
         android:text="Voltage Level"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,8 +45,10 @@
         android:id="@+id/cancelButton"
         android:layout_width="93dp"
         android:layout_height="91dp"
+        android:layout_marginBottom="189dp"
         android:text="취소"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="451dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
